--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,5 @@
-name: myapp
-description: A exported flutter project from FUNCTION12
-
-
+name: victory
+description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -21,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=3.1.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,24 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
   assets:
-    - assets/page-1/images/rectangle-7.png
-    - assets/page-1/images/lock.png
-    - assets/page-1/images/rectangle-18.png
-    - assets/page-1/images/mail.png
-    - assets/page-1/images/rectangle-18-MCV.png
-    - assets/page-1/images/rectangle-17.png
-    - assets/page-1/images/rectangle-17-gkR.png
-    - assets/page-1/images/ideogram1-removebg-preview-2.png
-    - assets/page-1/images/logo-removebg-preview-2.png
-    - assets/page-1/images/logo-removebg-preview-1.png
-    - assets/page-1/images/logo-removebg-preview-3.png
-    - assets/page-1/images/ideogram1-removebg-preview-1.png
-    - google_fonts/
-
+    - asset/
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -92,11 +74,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: ProductSans
+  #   - family: Schyler
   #     fonts:
-  #       - asset: assets/page-1/fonts/ProductSansRegular.ttf
-  #       - asset: assets/page-1/fonts/ProductSansBold.ttf
-          # style: italic
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
